# CUSTOMRAG

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
data/text_files/: machine_learning.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  langchain_agents.ipynb  pdf_loader.ipynb
src/: data_loader.py  embedding.py
